--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 .body{
     background-color:var(--Grayish-Blue);
     font-family:'Manrope',sans-serif;
+    font-size:13px;
 }
 
 .main-content{
@@ -32,6 +33,10 @@
 
 .card__text,.card__share{
     padding:10px 20px;
+}
+
+.card__text{
+    font-size:1rem;
 }
 
 .title{
