--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,12 @@
     --Desaturated-Dark-Blue: hsl(214, 17%, 51%);
     --Grayish-Blue: hsl(212, 23%, 69%);
     --Light-Grayish-Blue: hsl(210, 46%, 95%);
+    --white-color: rgba(255,255,255,1);
 }
 
 
 .body{
-    background-color: var(--Grayish-Blue);
+    background-color: var(--Light-Grayish-Blue);
     font-family: 'Manrope',sans-serif;
     font-size: 13px;
     min-height: 100vh;
@@ -28,9 +29,10 @@
 
 .card{
     min-width: 350px;
-    background-color: var(--Light-Grayish-Blue);
+    background-color: var(--white-color);
     border-radius: 8px;
     overflow: hidden;
+    color:var(--Grayish-Blue)
 }
 
 
@@ -43,9 +45,12 @@
 }
 
 .title{
-    font-weight: 700
+    font-weight: 700;
 }
 
+.profile__name, .title{
+    color:var(--Very-Dark-Grayish-Blue);
+}
 .paragraph,.time{
     font-weight: 500;
 }
@@ -55,8 +60,8 @@
     align-items: center;
 }
 .profile__img{
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     overflow: hidden;
 }
@@ -73,25 +78,31 @@
 }
 
 .profile__name{
-    margin:0;
+    margin:0 0 3px 0;
     display:block;
 }
 
 .btn-share{
     width: 30px;
     height: 30px;
-    background-color:var(--Grayish-Blue);
+    background-color:var(--Light-Grayish-Blue);
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: var(--Desaturated-Dark-Blue);
+    position:relative;
+    /* color: var(--Desaturated-Dark-Blue); */
     padding: 0;
     margin: 0;
     border: 0;
     cursor: pointer;
 }
+
+.btn-share--active{
+    filter:invert(.3);
+}
+
 
 .card__share--active{
     background-color: var(--Very-Dark-Grayish-Blue);
@@ -112,6 +123,8 @@
 .social-networks > svg, .social-networks > span{
     margin:0 10px;
 }
+
+
 
 @media screen and (min-width:1440px){
 
@@ -135,11 +148,27 @@
     } 
 
     .card__text, .card__share{
-        padding: 30px;
+        padding-right: 30px;
+        padding-left:30px;
+    }
+
+    .card__text{
+        padding-bottom:0;
+    }
+
+    .card__share{
+        padding-bottom:30px;
     }
 
     .img{
         object-fit:cover;
         object-position: center left;
+    }
+
+    .social-networks{
+        position:absolute;
+        background-color:red;
+        padding:24px;
+        right:0;
     }
 }
